--- a/main.css
+++ b/main.css
@@ -9,3 +9,27 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+#red {
+  border-top-color:#f00;
+}
+#orange {
+  border-top-color: #ffa500;
+}
+#yellow{
+  border-top-color: #ff0;
+}
+#green {
+  border-top-color: green;
+}
+#blue{
+  border-top-color:blue;
+}
+
+#indigo{
+  border-top-color: Indigo;
+}
+
+#violet{
+  border-top-color: violet
+}
+
